5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1747_1536.log
== TEST (2019-05-16 11:08:05) 
-- CODE:
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma =  3
m = 0

while(x >= -1) and (k > 0)
	soma = soma + 1
	m = m + 1
	

-- ERROR:
File "XXXX", line 6
    while(x >= -1) and (k > 0)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:11) 
-- CODE:
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 3
m = 0

while(x >= -1) and (k > 0)
	soma = soma + 1
	m = m + 1
	

-- ERROR:
File "XXXX", line 6
    while(x >= -1) and (k > 0)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:20) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 
m = 0

while(x >= -1) and (k > 0)
	soma = soma + 1
	m = m + 1

	

-- ERROR:
File "XXXX", line 4
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:25) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 3
m = 0

while(x >= -1) and (k > 0)
	soma = soma + 1
	m = m + 1

	

-- ERROR:
File "XXXX", line 7
    while(x >= -1) and (k > 0)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:39) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 3
m = 0

while(x >= -1) and (k > m):
	soma = soma + (())

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (())
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:26) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 2
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
2.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:19) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 2
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) - ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
2.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:36) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) - ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:59) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2))*((x**3/3))*((x**4/4))*((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:08) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) ((x**3/3)) ((x**4/4)) ((x**5/5))
	m = m + 1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + ((x**2/2)) ((x**3/3)) ((x**4/4)) ((x**5/5))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:26) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) + ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,10))

-- OUTPUT:
0.277568
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:53) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) + ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.277568
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:16) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) - ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:38) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) - ((x**4/4)) + ((x**5/5))
	m = m - 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:51) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) - ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:45) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + ((x**2/2)) + ((x**3/3)) - ((x**4/4)) + ((x**5/5))
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:42) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
print(soma = soma +(x**2/2))
	m = m + 1
print(round(soma,8))

-- ERROR:
File "XXXX", line 8
    print(soma = soma +(x**2/2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:57) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
print(x**2/2)
	m = m + 1
print(round(soma,8))

-- ERROR:
File "XXXX", line 8
    print(x**2/2)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:05) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	print(x**2/2)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:30) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	print(x**2/2)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0.020000000000000004
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:45) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	print(x**2)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0.04000000000000001
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:45) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma + (x**2) + (x**3) - (x**4) + (x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.56064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:39) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	print(x**2)
	print(x**3)
	print(x**4)
	print(x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:56) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	print(x**2)
	print(x**3)
	print(x**4)
	print(x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:09) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	print(x**2)
	print(x**3)
	print(x**4)
	print(x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.0003200000000000001
0.04000000000000001
0.008000000000000002
0.0016000000000000003
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:14) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(x >= -1) and (k > m):
	soma = soma (x) - (x**2/2)
	m = m + 1
print(round(soma,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma (x) - (x**2/2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:06) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = soma + (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:25) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = soma + (x**2) + (x**3) - (x**4) + (x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.56064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:15) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = soma + (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:19) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = soma + (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.267968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:31) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma =(x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.02233067
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:56) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma =(x**2) + (x**3) - (x**4) + (x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.04672
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:26) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma =(x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.02233067
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:40) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma =(x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,10))

-- OUTPUT:
0.0223306667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:51) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma =(x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.02233067
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:45:54) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.18233067
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:20) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = x - (x**2) + (x**3) - (x**4) + (x**5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.16672
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:40) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,8))

-- OUTPUT:
0.18233067
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:02) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,10))

-- OUTPUT:
0.1823306667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:08) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5) *n
	m = m + 1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5) *n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:15) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(k > m):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5) 
	m = m + 1
print(round(soma,10))

-- OUTPUT:
0.1823306667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:04) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(m < k):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5) 
	m = m + 1
print(round(soma,10))

-- OUTPUT:
0.1823306667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:52:07) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(m < k):
	soma = soma (x**m/m)
	m = m + 1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma (x**m/m)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:52:16) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(m < k):
	soma = soma + (x**m/m)
	m = m + 1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (x**m/m)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:23) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(m < k):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,10))

-- OUTPUT:
0.1823306667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:54:51) 
-- CODE:
from math import*
x = float(input("numero real:"))
k = int(input("numero inteiro:"))
soma = 0
m = 0

while(m < k):
	soma = x - (x**2/2) + (x**3/3) - (x**4/4) + (x**5/5)
	m = m + 1
print(round(soma,10))

-- EXECUTION TIME:
0.146022
-- TEST CASE 1:
---- input:
0.2
12
---- correct output:
0.1823215567
---- user output:
0.1823306667
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.4703018267
---- user output:
0.4886244833
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.4032
---- user output:
0.4481670622
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
